<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aam_item_border"
    android:orientation="vertical">

    <include layout="@layout/view_custom_toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_10"
        android:background="@color/aam_item_border" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_30"
                android:text="@string/str_add_motorman_vehicle_information"
                android:textColor="@color/color_66"
                android:textSize="@dimen/font_34" />

            <RelativeLayout
                android:id="@+id/rl_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginRight="@dimen/border_30"
                    android:padding="@dimen/border_30"
                    android:text="@string/str_add_motorman_city"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_34" />

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/tv_city"
                    android:layout_toRightOf="@+id/tv_city"
                    android:background="@null"
                    android:focusable="false"
                    android:scrollbars="vertical" />

                <ImageView
                    android:id="@+id/iv_city_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="11dp"
                    android:layout_marginRight="11dp"
                    android:src="@mipmap/item_more" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/border_2"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_licence_plate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/border_30"
                    android:padding="@dimen/border_30"
                    android:text="@string/str_add_motorman_licence_plate"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_34" />

                <Spinner
                    android:id="@+id/sp_licence_plate"
                    android:layout_width="@dimen/border_120"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/border_10"
                    android:background="@drawable/spinner_pull_down"
                    android:paddingLeft="@dimen/border_20"
                    android:paddingRight="@dimen/border_8">

                </Spinner>

                <EditText
                    android:id="@+id/et_licence_plate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="0123456789QWERTYUIOPASDFGHJKLZXCVBNM"
                    android:gravity="center_vertical"
                    android:maxLength="6"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_32" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/rl_vehicle_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/border_2"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/tv_vehicle_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginRight="@dimen/border_30"
                    android:padding="@dimen/border_30"
                    android:text="@string/str_add_motorman_vehicle_model"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_34" />

                <EditText
                    android:id="@+id/et_vehicle_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/tv_vehicle_model"
                    android:layout_toRightOf="@+id/tv_vehicle_model"
                    android:background="@null"
                    android:focusable="false"
                    android:scrollbars="vertical" />

                <ImageView
                    android:id="@+id/iv_vehicle_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="11dp"
                    android:layout_marginRight="11dp"
                    android:src="@mipmap/item_more" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/border_2"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/border_30"
                    android:padding="@dimen/border_30"
                    android:text="@string/str_add_motorman_owner_name"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_34" />

                <EditText
                    android:id="@+id/et_owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_32" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/border_2"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_record_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/border_30"
                    android:padding="@dimen/border_30"
                    android:text="@string/str_add_motorman_record_date"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_34" />

                <EditText
                    android:id="@+id/et_record_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:scrollbars="vertical"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_32" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_30"
                android:text="@string/str_add_motorman_personal_details"
                android:textColor="@color/color_66"
                android:textSize="@dimen/font_34" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/border_2"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_driver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/border_30"
                    android:padding="@dimen/border_30"
                    android:text="@string/str_add_motorman_driver_name"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_34" />

                <EditText
                    android:id="@+id/et_driver_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_32" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/border_2"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_IDCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/border_30"
                    android:padding="@dimen/border_30"
                    android:text="@string/str_add_motorman_IDCard"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_34" />

                <EditText
                    android:id="@+id/et_IDCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:maxLength="18"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_32" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/border_2"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/border_30"
                    android:padding="@dimen/border_30"
                    android:text="@string/str_add_motorman_phone"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_34" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:maxLength="11"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_32" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/border_2"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/border_30"
                    android:padding="@dimen/border_30"
                    android:text="@string/str_add_motorman_date"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_34" />

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:scrollbars="vertical"
                    android:textColor="@color/color_33"
                    android:textSize="@dimen/font_32" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/border_30"
                android:text="@string/str_add_motorman_file"
                android:textColor="@color/color_66"
                android:textSize="@dimen/font_34" />
            <ImageView
                android:id="@+id/iv_file"
                android:layout_width="match_parent"
                android:minHeight="@dimen/border_200"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/border_20"
                android:background="@android:color/white"
                android:src="@mipmap/message_tip_add"/>

            <TextView
                android:id="@+id/tv_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/border_50"
                android:layout_marginLeft="@dimen/border_50"
                android:layout_marginRight="@dimen/border_50"
                android:layout_marginTop="@dimen/border_40"
                android:background="@android:color/holo_green_dark"
                android:gravity="center"
                android:padding="@dimen/border_20"
                android:text="@string/str_add_motorman_finish"
                android:textColor="@color/color_44" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>